Spacing fix in category-select.scss

--- a/css/modules/category-select.scss
+++ b/css/modules/category-select.scss
@@ -7,7 +7,7 @@
     .category-filter-label {
         display: inline-block;
         padding: 10px 20px;
-        margin-right: 10px;
+        margin: 10px 10px 0 0;
         background-color: #f4f4f4;
         border: 2px solid #ccc;
         border-radius: 4px;
